<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.neatorobotics.sdk.android.example.robots.RobotCommandsActivityFragment"
    tools:showIn="@layout/activity_robot_commands">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="16sp"
            android:text="@string/available_commands_message_text" />
        <Button
            android:id="@+id/spotCleaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start spot cleaning"/>
        <Button
            android:id="@+id/houseCleaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start house cleaning"/>
        <Button
            android:id="@+id/pauseCleaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pause cleaning"/>
        <Button
            android:id="@+id/stopCleaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stop cleaning"/>
        <Button
            android:id="@+id/resumeCleaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resume cleaning"/>
        <Button
            android:id="@+id/returnToBaseCleaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Return to base cleaning"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="16sp"
            android:text="@string/scheduling_message_text" />
        <Button
            android:id="@+id/enableDisableScheduling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enable/Disable scheduling"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="16sp"
            android:text="@string/scheduling_every_wednesday_message_text" />
        <Button
            android:id="@+id/wednesdayScheduling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Schedule every Wednesday at 3:00 pm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="16sp"
            android:text="@string/scheduling_get_events" />
        <Button
            android:id="@+id/getScheduling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show robot schedule"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="16sp"
            android:text="@string/find_me_message_text" />
        <Button
            android:id="@+id/findMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Find me"/>

    </LinearLayout>
</RelativeLayout>
